--- a/container/supervisord.conf
+++ b/container/supervisord.conf
@@ -10,18 +10,18 @@ file=/var/run/supervisor.sock
 # socket access mode (default 0700)
 chmod=0700
 
-[program:vncserver]
-command=/usr/local/bin/vnc-start.sh
-user=user9
+[program:xrdp]
+command=/usr/local/bin/xrdp-start.sh
+user=root
 priority=10
 autostart=true
 autorestart=true
 startretries=3
 redirect_stderr=true
-stdout_logfile=/var/log/supervisor/vncserver.log
+stdout_logfile=/var/log/supervisor/xrdp.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=3
-environment=HOME="/home/user9",USER="user9",DISPLAY=":1"
+environment=HOME="/root",USER="root"
 
 [supervisorctl]
 # Use the unix domain socket so supervisorctl works inside the container
